--- a/org.nasdanika.amur.parent/pom.xml
+++ b/org.nasdanika.amur.parent/pom.xml
@@ -95,6 +95,7 @@
 	</build>
 	<modules>
 		<module>../org.nasdanika.common</module>
+		<module>../org.nasdanika.amur</module>
 		<module>../org.nasdanika.amur.feature</module>
 		<module>../org.nasdanika.amur.repository</module>
 	</modules>
