--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 
 	<modules>
 		<module>org.nasdanika.common</module>
+		<module>org.nasdanika.amur</module>
 		<module>org.nasdanika.amur.feature</module>
 		<module>org.nasdanika.amur.repository</module>
 	</modules>
