--- a/org.nasdanika.amur.parent/pom.xml
+++ b/org.nasdanika.amur.parent/pom.xml
@@ -97,6 +97,7 @@
 		<module>../org.nasdanika.common</module>
 		<module>../org.nasdanika.amur</module>
 		<module>../org.nasdanika.amur.edit</module>
+		<module>../org.nasdanika.amur.editor</module>
 		<module>../org.nasdanika.amur.feature</module>
 		<module>../org.nasdanika.amur.repository</module>
 	</modules>
