--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 		<module>org.nasdanika.amur.edit</module>
 		<module>org.nasdanika.amur.editor</module>
 		<module>org.nasdanika.amur.diagram</module>
+		<module>org.nasdanika.amur.docgen.html</module>
 		<module>org.nasdanika.amur.feature</module>
 		<module>org.nasdanika.amur.repository</module>
 	</modules>
